# PIB-Nowcast

./: .gitignore  README.md  collect_data.py  fit_help.txt  fit_help2.txt  main.py  mle_fit_help.txt  news_help.txt  pyproject.toml  series_spec.csv  test_mem.py
notebooks/: 2runs_of_pipeline.ipynb  stationarity_study.ipynb  stationarity_study_v2.py  stationarity_study_v3.py
pib_nowcast/: __init__.py  config.py
pib_nowcast/data/: dfm_params.csv  forecasts.xlsx  last_data_at_time.xlsx  news_impacts.xlsx  series_spec.csv  series_spec_MONTHLY.csv  series_spec_MONYHLY.csv
pib_nowcast/data/stationarity/: stationarity_best.csv  stationarity_results.csv
pib_nowcast/utils/: __init__.py  news.py
pib_nowcast/utils/get_data/: __init__.py  _common.py  _get_bcb.py  _get_ipeadata.py  _get_pib.py
pib_nowcast/utils/transformations/: __init__.py  deflate.py  outliers.py  seas_adj  seas_adj.py  stationarity.py  transform_pipeline.py
pib_nowcast/workflow/: __init__.py  last_data_at_time.xlsx  pipeline.py
src/pib_nowcast/data/: last_data_at_time.xlsx  series_spec.csv
src/pib_nowcast/utils/get_data/: __init__.py  _get_bcb.py  _get_ipeadata.py  _get_pib.py
src/pib_nowcast/utils/transformations/: seas_adj
src/pib_nowcast/workflow/: pipeline.py  testing.py
