[project]
name = "pib-nowcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=7.0",
    "ipeadatapy>=0.1.9",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-bcb>=0.3.6",
    "sidrapy>=0.1.4",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
